--- a/app/src/main/res/layout/activity_quen_mat_khau.xml
+++ b/app/src/main/res/layout/activity_quen_mat_khau.xml
@@ -4,10 +4,128 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    tools:context=".QuenMatKhau">
+    tools:context=".QuenMatKhau"
+    android:gravity="center"
+    android:background="#74B2D2"
+    android:orientation="vertical"
+    >
 
+    <LinearLayout
+        android:gravity="center"
+        android:layout_margin="10dp"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
 
+        <TextView
+            android:fontFamily="@font/open_sans_bold"
+            android:layout_marginBottom="30dp"
+            android:textSize="23sp"
+            android:textColor="#FF5722"
+            android:text="QUÊN MẬT KHẨU"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
 
+        <LinearLayout
+            android:padding="5dp"
+            android:background="@drawable/btn_dn"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            >
+            <ImageView
+                android:layout_marginLeft="18dp"
+                android:src="@drawable/users"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                />
+            <EditText
+                android:background="@null"
+                android:id="@+id/ed_taikhoan"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="20dp"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="Tài khoản"
+
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:padding="5dp"
+            android:background="@drawable/btn_dn"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <ImageView
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/password"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                />
+            <EditText
+                android:background="@null"
+                android:id="@+id/ed_matkhaumoi"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="20dp"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="Mật khẩu mới"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:padding="5dp"
+            android:background="@drawable/btn_dn"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            >
+            <ImageView
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/password"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                />
+            <EditText
+                android:background="@null"
+                android:id="@+id/ed_matkhaumoi_confirm"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="20dp"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="Nhập lại mật khẩu"
+                />
+        </LinearLayout>
+
+        <androidx.cardview.widget.CardView
+            android:layout_marginTop="40dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="5dp"
+            >
+            <TextView
+                android:id="@+id/btn_quenmatkhau"
+                android:text="THAY ĐỔI"
+                android:textSize="20sp"
+                android:fontFamily="@font/open_sans_bold"
+                android:textColor="#FFFF"
+                android:background="@drawable/btn_qmk"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                />
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
 
 </LinearLayout>
