--- a/app/src/main/res/menu/nav_bottom.xml
+++ b/app/src/main/res/menu/nav_bottom.xml
@@ -6,11 +6,11 @@
         android:icon="@drawable/homes"/>
     <item
         android:id="@+id/bt_banchay"
-        android:title="SP Hot"
+        android:title="Giỏ hàng"
         android:icon="@drawable/rank1"/>
     <item
         android:id="@+id/bt_danhmuc"
-        android:title="Danh mục"
+        android:title="Hoá đơn"
         android:icon="@drawable/categorys"/>
     <item
         android:id="@+id/bt_nguoidung"
