--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -1,63 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_trangchu"
-            android:icon="@drawable/home"
-            android:title="Trang chủ" />
 
-        <item
-            android:id="@+id/nav_danhmuc"
-            android:icon="@drawable/category"
-            android:title="Danh mục" />
-        <item
-            android:id="@+id/nav_giohang"
-            android:icon="@drawable/shoppingcart"
-            android:title="Giỏ hàng" />
+    <item
+        android:id="@+id/mQLTrangChu"
+        android:title="Trang chủ"
+        android:icon="@drawable/home"
+        />
 
-        <item
-            android:id="@+id/sub_Top"
-            android:title="Sản phẩm bán chạy"
-            android:icon="@drawable/rank" />
+    <item android:title="Admin">
+        <menu>
+            <item
+                android:id="@+id/mQLSanPham"
+                android:title="Quản lý sản phẩm"
+                android:icon="@drawable/bookk"
+                />
+            <item
+                android:id="@+id/mQLTheLoai"
+                android:title="Quản lý thể loại"
+                android:icon="@drawable/ic_category"
+                />
+            <item
+                android:id="@+id/mQLTaiKhoan"
+                android:title="Quản lý tài khoản"
+                android:icon="@drawable/user"
+                />
+            <item
+                android:id="@+id/mQLHoaDon"
+                android:title="Quản lý hóa đơn"
+                android:icon="@drawable/category"
+                />
+            <item
+                android:id="@+id/mThongKe"
+                android:title="Thống kê"
+                android:icon="@drawable/rank"
+                />
+        </menu>
+    </item>
 
-        <item android:title="Cá nhân">
-            <menu>
+    <item android:title="Người dùng">
+        <menu>
+            <item
+                android:id="@+id/mThongTinApp"
+                android:title="Thông tin ứng dụng"
+                android:icon="@drawable/info"
+                />
+            <item
+                android:id="@+id/mDoiMatKhau"
+                android:title="Đổi mật khẩu"
+                android:icon="@drawable/ic_key"
+                />
+        </menu>
+    </item>
 
-                <item
-                    android:id="@+id/nav_HoSo"
-                    android:icon="@drawable/user"
-                    android:title="Hồ sơ" />
+    <item
+        android:id="@+id/mDangXuat"
+        android:title="Đăng xuất"
+        android:icon="@drawable/signout"
+        />
 
-                <item
-                    android:id="@+id/nav_HoaDon"
-                    android:icon="@drawable/category"
-                    android:title="Hóa đơn" />
 
-                <item
-                    android:id="@+id/nav_lichsumuahang"
-                    android:icon="@drawable/history"
-                    android:title="Lịch sử mua hàng" />
-
-            </menu>
-        </item>
-
-        <item android:title="Khác">
-            <menu>
-
-                <item
-                    android:id="@+id/sub_Pass"
-                    android:icon="@drawable/history"
-                    android:title="Đổi mật khẩu"/>
-                <item
-                    android:id="@+id/sub_Support"
-                    android:icon="@drawable/info"
-                    android:title="Hỗ trợ"/>
-
-                <item
-                    android:id="@+id/sub_Logout"
-                    android:icon="@drawable/signout"
-                    android:title="Đăng Xuất"/>
-            </menu>
-        </item>
-    </group>
 </menu>
