--- a/app/src/main/res/menu/nav_bottom.xml
+++ b/app/src/main/res/menu/nav_bottom.xml
@@ -5,15 +5,15 @@
         android:title="Trang chủ"
         android:icon="@drawable/homes"/>
     <item
-        android:id="@+id/bt_banchay"
+        android:id="@+id/bt_giohang"
         android:title="Giỏ hàng"
         android:icon="@drawable/rank1"/>
     <item
-        android:id="@+id/bt_danhmuc"
+        android:id="@+id/bt_hoadon"
         android:title="Hoá đơn"
         android:icon="@drawable/categorys"/>
     <item
-        android:id="@+id/bt_nguoidung"
+        android:id="@+id/bt_taikhoan"
         android:title="Tài Khoản"
         android:icon="@drawable/users"/>
 </menu>
