Đã Rẽ Nhánh Mới

--- a/app/src/main/res/layout/fragment_trang_chu.xml
+++ b/app/src/main/res/layout/fragment_trang_chu.xml
@@ -100,7 +100,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="3dp"
             android:layout_marginBottom="3dp"
-            android:text="Loại Sách"
+            android:text="Danh Mục"
             android:fontFamily="@font/open_sans_bold"
             android:textSize="18sp"
             android:textColor="#FF3D00"
